<resources>
    <string name="app_name">Conduit RealWorld App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_need_an_account">Need an account?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_have_an_account">Have an account?</string>
    <string name="hint_user_name">Username</string>
</resources>